# docx-content-control

./: .gitignore  Cargo.toml  LICENSE  README.md
baserow-cc/: Cargo.toml
baserow-cc/src/: main.rs
docx-cc/: Cargo.toml  README.md
docx-cc/src/: lib.rs
docx-cc/tests/data/: TownLandRiver.docx  TownLandRiver_expected.docx  content_controlled_document_expected.docx  run_with_params.docx  run_with_params_expected.docx  run_with_params_imgs.docx
docx-cli/: Cargo.toml
docx-cli/src/: main.rs
py-docx-cc/: Cargo.toml  pyproject.toml
py-docx-cc/examples/: test.py
py-docx-cc/src/: lib.rs
src/: main.rs
tests/data/: content_controlled_document.docx
